--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -146,6 +146,7 @@ p {
 .sidebar-wrapper .dot_empty {
   height: 25px;
   width: 25px;
+  border: 2px solid white;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -153,10 +154,12 @@ p {
 .sidebar-wrapper .dot_full {
   height: 25px;
   width: 25px;
+  border: 2px solid white;
   background-color: #fff;
   border-radius: 50%;
   display: inline-block;
 }
+
 .sidebar-wrapper .interests-list {
   margin-bottom: 0;
 }
