--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -6,7 +6,7 @@
 					<span class="dot_empty"></span>
 					<span class="dot_empty"></span><span class="dot_empty"></span>
 					<span class="dot_empty"></span><span class="dot_empty"></span> 
-					<div class="dot_full" data-level="{{ .level }}">
+					<span class="dot_full" data-level="{{ .level }}">
 					</li>
 				{{ end }}
                 </ul>
