--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -2,12 +2,9 @@
                 <h2 class="container-block-title">{{ i18n "language" }}</h2>
                 <ul class="list-unstyled interests-list">
 				{{ range .Site.Params.language.list }}
-                    <li>{{ .language }}  
-					<span class="dot_empty"></span>
-					<span class="dot_empty"></span><span class="dot_empty"></span>
-					<span class="dot_empty"></span><span class="dot_empty"></span> 
-					<span class="dot_full" data-level="{{ .level }}">
-					</li>
+                    <li>{{ .language }} <span class="lang-desc"></span></li>
+					<li><span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
 				{{ end }}
                 </ul>
             </div><!--//language-->
+  
