trying to get circles running

--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -3,7 +3,10 @@
                 <ul class="list-unstyled interests-list">
 				{{ range .Site.Params.language.list }}
                     <li>{{ .language }} <span class="lang-desc"></span></li>
-					<li><span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
+					<li>
+					<span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> 
+					{{ range  .level }} <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> {{ end }}
+					</li>
 				{{ end }}
                 </ul>
             </div><!--//language-->
