--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -5,7 +5,7 @@
                     <li>{{ .language }} <span class="lang-desc"></span></li>
 					<li>
 					<span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> 
-					{{ range  .level }} <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> {{ end }}
+					<!--{{ range  .level }} <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> {{ end }}-->
 					</li>
 				{{ end }}
                 </ul>
