--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -1,13 +1,15 @@
             <div class="language-container container-block">
                 <h2 class="container-block-title">{{ i18n "language" }}</h2>
                 <ul class="list-unstyled interests-list">
-				{{ range .Site.Params.language.list }}
-                    <li>{{ .language }} <span class="lang-desc"></span></li>
-					<li>
-					<span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> 
-					<!--{{ range  .level }} <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> {{ end }}-->
-					</li>
-				{{ end }}
+                    <li> German </li>
+					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> </li>
+                    <li> English </li>
+					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> </li>
+                    <li> Japanese </li>
+					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
+                    <li> French </li>
+					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
                 </ul>
             </div><!--//language-->
+
   
