--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -6,9 +6,9 @@
                     <li> English </li>
 					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> </li>
                     <li> Japanese </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
+					<li><span class="dot_empty"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
                     <li> French </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
+					<li><span class="dot_empty"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
                 </ul>
             </div><!--//language-->
 
