--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -145,7 +145,7 @@ p {
 }
 .sidebar-wrapper .dot_empty {
   height: 22px;
-  width: 22x;
+  width: 30px;
   border: 2px solid white;
   background-color: #bbb;
   border-radius: 50%;
