--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -5,7 +5,7 @@
                 </div><!--//intro-->
 				{{ range .Site.Params.publications.list }}
                 <div class="item">
-                    <span class="publication-title"><a href="{{ .url }}">{{ .title }}</a></span> - <span class="publication-tagline">{{ with .tagline }}{{ . | markdownify }}{{ end }}</span>
+                    <span class="publications-title"><a href="{{ .url }}">{{ .title }}</a></span> - <span class="publications-tagline">{{ with .tagline }}{{ . | markdownify }}{{ end }}</span>
                 </div><!--//item-->
 				{{ end }}
             </section><!--//section-->
