--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -1,5 +1,5 @@
             <section class="section publications-section">
-                <h2 class="section-title"><i class="fa {{ .Site.Params.publications.icon }}"></i>{{ i18n "publications" }}</h2>
+                <h2 class="section-title"><i class="fa {{ .Site.Params.publications.icon }}"></i>{{ i18n "TEST" }}</h2>
                 <div class="intro">
                     <p>{{ with .Site.Params.publications.intro }}{{ . | markdownify }}{{ end }}</p>
                 </div><!--//intro-->
