--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -1,11 +1,11 @@
             <section class="section publications-section">
-                <h2 class="section-title"><i class="fa {{ .Site.Params.publications.icon }}"></i>{{ i18n "TEST" }}</h2>
+                <h2 class="section-title"><i class="fa {{ .Site.Params.publications.icon }}"></i>{{ i18n "publications" }}</h2>
                 <div class="intro">
                     <p>{{ with .Site.Params.publications.intro }}{{ . | markdownify }}{{ end }}</p>
                 </div><!--//intro-->
 				{{ range .Site.Params.publications.list }}
                 <div class="item">
-                    <span class="publications-title"><a href="{{ .url }}">{{ .title }}</a></span> - <span class="publications-tagline">{{ with .tagline }}{{ . | markdownify }}{{ end }}</span>
+                    <span class="publication-title"><a href="{{ .url }}">{{ .title }}</a></span> - <span class="publications-tagline">{{ with .tagline }}{{ . | markdownify }}{{ end }}</span>
                 </div><!--//item-->
 				{{ end }}
             </section><!--//section-->
