--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/plugins/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="/path/to/folder/css/academicons.min.css"/>
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}assets/academicons/css/academicons.min.css">
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/{{ .Site.Params.styles }}">
