--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,6 +30,10 @@
     {{ if .Site.Params.skills.enable }}
 	{{ partial "skills.html" . }}
     {{ end }}
+	
+    {{ if .Site.Params.softskills.enable }}
+	{{ partial "skills.html" . }}
+    {{ end }}
 
 	</div><!--//main-body-->
     </div>
