added softskill html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
     {{ end }}
 	
     {{ if .Site.Params.softskills.enable }}
-	{{ partial "skills.html" . }}
+	{{ partial "softskills.html" . }}
     {{ end }}
 
 	</div><!--//main-body-->
