--- a/layouts/partials/softskills.html
+++ b/layouts/partials/softskills.html
@@ -3,7 +3,7 @@
                 <div class="softskillset">
 				{{ range .Site.Params.softskills.list }}
                     <div class="item">
-                        <h3 class="level-title">{{ .softskill }}</h3>
+                        <h3 class="level-title">{{ .skill }}</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="{{ .level }}">
                             </div>
