trying to get softskills working

--- a/layouts/partials/softskills.html
+++ b/layouts/partials/softskills.html
@@ -1,6 +1,6 @@
             <section class="softskills-section section">
                 <h2 class="section-title"><i class="fa {{ .Site.Params.softskills.icon }}"></i>{{ i18n "softskills" }}</h2>
-                <div class="softskillset">
+                <div class="skillset">
 				{{ range .Site.Params.softskills.list }}
                     <div class="item">
                         <h3 class="level-title">{{ .skill }}</h3>
