--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -82,6 +82,13 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+.sidebar-wrapper .birthday {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .sidebar-wrapper .profile {
   margin-bottom: 15px;
 }
