--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,6 +1,8 @@
             <div class="profile-container">
                 <img class="profile img-circle" src="{{ .Site.BaseURL }}assets/images/{{ .Site.Params.profile.avatar }}" alt="" width="150" height="150" />
                 <h1 class="name">{{ .Site.Params.profile.name }}</h1>
-                <h3 class="birthday">{{ .Site.Params.profile.birthday }}</h3>
                 <h3 class="tagline">{{ .Site.Params.profile.tagline }}</h3>
+				<h3 class="birthday">{{ .Site.Params.profile.birthday }}</h3>
+				<h3 class="location">{{ .Site.Params.profile.location }}</h3>
+
             </div><!--//profile-container-->
