--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -83,7 +83,14 @@ p {
   margin-bottom: 0;
 }
 .sidebar-wrapper .birthday {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.sidebar-wrapper .location {
+  color: rgba(255, 255, 255, 1);
   font-size: 16px;
   font-weight: 400;
   margin-top: 0;
