trying to add additional profile info

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,6 +5,8 @@
 		{{ if .IsTranslated }}
 		{{ partial "translate.html" . }}
 		{{ end }}
+				
+		{{ partial "profile_info.html" . }}
 
 		{{ if .Site.Params.contact.enable }}
 		{{ partial "contact.html" . }}
