--- a/layouts/partials/profile_info.html
+++ b/layouts/partials/profile_info.html
@@ -2,7 +2,8 @@
                 <h2 class="container-block-title">{{ i18n "profile_info" }}</h2>
                 <ul class="list-unstyled profile_info-list">
 				{{ range .Site.Params.profile_info.list }}
-                    <li><i class="fa {{ .icon }}">&ensp;</i>{{ .interest }}</li>
+                    <!--<li><i class="fa {{ .icon }}">&ensp;</i>{{ .interest }}</li>-->
+					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i><a>{{ .title }}</a></li>
 				{{ end }}
                 </ul>
             </div><!--//profile_info-->
