--- a/layouts/partials/profile_info.html
+++ b/layouts/partials/profile_info.html
@@ -3,7 +3,7 @@
                 <ul class="list-unstyled profile_info-list">
 				{{ range .Site.Params.profile_info.list }}
                     <!--<li><i class="fa {{ .icon }}">&ensp;</i>{{ .interest }}</li>-->
-					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i>{{ .title }}</li>
+					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i>&nbsp;{{ .title }}</li>
 				{{ end }}
                 </ul>
             </div><!--//profile_info-->
