--- a/layouts/partials/softskills.html
+++ b/layouts/partials/softskills.html
@@ -1,5 +1,5 @@
             <section class="softskills-section section">
-                <h2 class="section-title"><i class="fa {{ .Site.Params.softskills.icon }}"></i>{{ i18n "softskills" }}</h2>
+                <h2 class="section-title"><i class="fa {{ .Site.Params.softskills.icon }}"></i>{{ .Site.Params.softskills.title }}</h2>
                 <div class="skillset">
 				{{ range .Site.Params.softskills.list }}
                     <div class="item">
