--- a/layouts/partials/interests_backup.html
+++ b/layouts/partials/interests_backup.html
@@ -2,7 +2,8 @@
                 <h2 class="container-block-title">{{ i18n "interests" }}</h2>
                 <ul class="list-unstyled interests-list">
 				{{ range .Site.Params.interests.list }}
-					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i>{{ .interest }}</li>
+                    <li>{{ .interest }}</li>
+					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i><a href="{{ .url }}">{{ .interest }}</li>
 				{{ end }}
                 </ul>
             </div><!--//interests-->
