--- a/layouts/partials/interests.html
+++ b/layouts/partials/interests.html
@@ -2,7 +2,7 @@
                 <h2 class="container-block-title">{{ i18n "interests" }}</h2>
                 <ul class="list-unstyled interests-list">
 				{{ range .Site.Params.interests.list }}
-					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i>{{ &nbsp .interest }}</li>
+					<li class="{{ .class }}"><i class="fa {{ .icon }}"></i> &nbsp {{ .interest }}</li>
 				{{ end }}
                 </ul>
             </div><!--//interests-->
