--- a/layouts/partials/language.html
+++ b/layouts/partials/language.html
@@ -1,15 +1,8 @@
             <div class="language-container container-block">
                 <h2 class="container-block-title">{{ i18n "language" }}</h2>
                 <ul class="list-unstyled interests-list">
-                    <li> German </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> </li>
-                    <li> English </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_full"></span> </li>
-                    <li> Japanese </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
-                    <li> French </li>
-					<li><span class="dot_full"></span> <span class="dot_full"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> <span class="dot_empty"></span> </li>
+				{{ range .Site.Params.language.list }}
+                    <li>{{ .language }} <span class="lang-desc">({{ .level }})</span></li>
+				{{ end }}
                 </ul>
             </div><!--//language-->
-
-  
