--- a/static/assets/plugins/font-awesome/css/v4-shims.css
+++ b/static/assets/plugins/font-awesome/css/v4-shims.css
@@ -22,6 +22,9 @@
 .fa.fa-close:before {
   content: "\f00d"; }
 
+.fa.fa-running:before {
+    content: "\f70c"; }
+
 .fa.fa-gear:before {
   content: "\f013"; }
 
