--- a/static/assets/plugins/font-awesome/css/v4-shims.css
+++ b/static/assets/plugins/font-awesome/css/v4-shims.css
@@ -22,9 +22,6 @@
 .fa.fa-close:before {
   content: "\f00d"; }
 
-.fa.fa-running:before {
-    content: "\f70c"; }
-
 .fa.fa-gear:before {
   content: "\f013"; }
 
@@ -66,9 +63,16 @@
 .fa.fa-play-circle-o {
   font-family: 'Font Awesome 5 Free';
   font-weight: 400; }
-
+  
 .fa.fa-play-circle-o:before {
   content: "\f144"; }
+  
+.fa.fa-running {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 400; }
+
+.fa.fa-running {
+  content: "\f70c"; }
 
 .fa.fa-repeat:before {
   content: "\f01e"; }
