--- a/layouts/partials/experiences.html
+++ b/layouts/partials/experiences.html
@@ -9,6 +9,7 @@
                             <div class="time">{{ .dates }}</div>
                         </div><!--//upper-row-->
                         <div class="company">{{ .company }}</div>
+                        <div class="project">{{ .project }}</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
