--- a/layouts/partials/experiences.html
+++ b/layouts/partials/experiences.html
@@ -6,8 +6,9 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">{{ .position }}</h3>
-                            <div class="time">{{ .dates }}</div>
                         </div><!--//upper-row-->
+                        <div class="project">{{ .project }}
+                             class="time">{{ .dates }}</div>
                         <div class="company">{{ .company }}</div>
                     </div><!--//meta-->
                     <div class="details">
