--- a/layouts/partials/experiences.html
+++ b/layouts/partials/experiences.html
@@ -6,7 +6,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">{{ .position }}</h3>
-                            <div class="time">{{ .dates }}</div>
+                            <<h3 class="time">{{ .dates }}</h3>
                         </div><!--//upper-row-->
                         <div class="project">{{ .project }}</div>
                         <div class="company">{{ .company }}</div>
