--- a/layouts/partials/experiences.html
+++ b/layouts/partials/experiences.html
@@ -5,8 +5,8 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">{{ .position }}
-                             class="time">{{ .dates }}</h3>
+                            <h3 class="job-title">{{ .position }}</h3>
+                            <div class="time">{{ .dates }}</div>
                         </div><!--//upper-row-->
                         <div class="project">{{ .project }}</div>
                         <div class="company">{{ .company }}</div>
