--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -248,6 +248,10 @@ p {
   margin-bottom: 10px;
   color: #97AAC3;
 }
+.main-wrapper .project {
+  margin-bottom: 10px;
+  color: #97AAC3;
+}
 .main-wrapper .project-title {
   font-size: 16px;
   font-weight: 400;
