trying to add higher education

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -226,6 +226,9 @@ p {
 .main-wrapper .experiences-section .item {
   margin-bottom: 30px;
 }
+.main-wrapper .highereducation-section .item {
+  margin-bottom: 30px;
+}
 .main-wrapper .upper-row {
   position: relative;
   overflow: hidden;
