--- a/layouts/partials/highereducation.html
+++ b/layouts/partials/highereducation.html
@@ -1,4 +1,4 @@
-            <section class="section experiences-section">
+            <section class="section highereducation-section">
                 <h2 class="section-title"><i class="fa {{ .Site.Params.experiences.icon }}"></i>{{ i18n "experiences" }}</h2>
 
 				{{ range .Site.Params.jobs.list }}
