trying to get higher education work

--- a/layouts/partials/highereducation.html
+++ b/layouts/partials/highereducation.html
@@ -1,5 +1,5 @@
             <section class="section highereducation-section">
-                <h2 class="section-title"><i class="fa {{ .Site.Params.experiences.icon }}"></i>{{ i18n "experiences" }}</h2>
+                <h2 class="section-title"><i class="fa {{ .Site.Params.highereducation.icon }}"></i>{{ i18n "highereducation" }}</h2>
 
 				{{ range .Site.Params.jobs.list }}
                 <div class="item">
